--- a/css/style.css
+++ b/css/style.css
@@ -54,12 +54,13 @@ ul li a {
 ul li a:hover {
     color: #fff;
 }
-.icon {
-  font-size: 25px;
-}
+
+
 .icon i {
-  padding: 8px;
-  color: #fff;
+    padding: 10px;
+    border: 2px solid white;
+    border-radius: 100px;
+    margin: 0 5px;
 }
 .icon p {
   font-size: 13px;
